Fix css from responsive navbar on mobile

--- a/Components/Header/styles.module.css
+++ b/Components/Header/styles.module.css
@@ -124,7 +124,7 @@
     .responsive {
         animation: fadein 1s;
         position: absolute;
-        top: 60px;
+        top: 1em;
         left: 0;
         flex-direction: column;
         width: 100%;
